# bigobject

./: Cargo.toml  flake.nix
.github/workflows/: nix.yml  test.yml
bigobject_derive/: Cargo.toml
bigobject_derive/src/: lib.rs
src/: bigmap.rs  bigobject.rs  db.rs  db_key.rs  lib.rs  storage.rs
src/bigobject/: bigmap.rs  bigvec.rs
src/storage/: batch.rs  db.rs  guard.rs  lock_context.rs  prefix.rs
tests/: basic.rs  derive.rs
