[package]
name = "bigobject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elsa = "1.8.1"
parking_lot = "0.12.1"
rmp-serde = "1.1.1"
rocksdb = "0.20.1"
serde = { version = "1.0.159", features = ["derive"] }
storekey = "0.4.1"

[dev-dependencies]
anyhow = "1.0.70"
tempfile = "3.5.0"
